@@ -1,5 +1,12 @@
 2004-02-10  Alvaro del Castillo  <acs@barrapunto.com>
 
+	* libplanner/mrp-group.c 
+	* src/planner-cmd-manager.c
+	* src/planner-group-dialog.c
+	Clean from a wrong commit
+
+2004-02-10  Alvaro del Castillo  <acs@barrapunto.com>
+
 	* po/es.po
 	Use the same translation for manager (encargado) in all places
 	* src/planner-group-dialog.c
